--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
 
    
   #chatWindow {
-    margin-top: 70px;   /* height of header */
+    margin-top: 70px;  
     
     padding: 1rem;
     overflow-y: auto;
@@ -109,7 +109,7 @@
   }
 
  
-/* === NAVIGATION LINKS === */
+
 nav {
     display: flex;
     gap: 1rem;
@@ -126,11 +126,10 @@ nav {
     color: #ddd;
   }
   
-  /* === HAMBURGER MENU === */
   .menu {
     font-size: 1.5rem;
     cursor: pointer;
-    display: none; /* hidden by default for large screens */
+    display: none; 
     margin-right: 1rem;
   }
   
@@ -174,9 +173,10 @@ nav {
       }
     
       form {
-        left: 0; /* Full width on small screens */
+        left: 0; 
       }
    
  
   
+
 }
